pkl-core/src/test/files/LanguageSnippetTests/input/errors/delimiters/missingMethodParameterListSeparator.pkl
function foo(arg1 arg2) = arg1 + arg2

res1 = foo(1, 2)
